# qtpanel

./: .gitignore  CMakeLists.txt  README.md  Xxf86vmConfig.cmake  applet.cpp  applet.h  appletapplicationsmenusettings.ui  appletbacklightsettings.ui  appletbatterysettings.ui  appletclocksettings.ui  appletdemosettings.ui  appletlaunchersettings.ui  appletmediasettings.ui  appletmemorysettings.ui  appletpagersettings.ui  applets.h  appletsessionsettings.ui  appletvolumesettings.ui  applicationsmenuapplet.cpp  applicationsmenuapplet.h  atoms.cpp  atoms.h  backlightapplet.cpp  backlightapplet.h  battery.cpp  battery.h  batteryapplet.cpp  batteryapplet.h  build.sh  calendarworkinghours.cpp  calendarworkinghours.h  client.cpp  client.h  clockapplet.cpp  clockapplet.h  compmgr.cpp  compmgr.h  config.h.in  contributors.txt  demoapplet.cpp  (+59 more)
data/: applets.xml  qtpanel.conf
translations/: qtpanel_it.ts
